--- a/frontend/src/components/comfirmed.css
+++ b/frontend/src/components/comfirmed.css
@@ -1,12 +1,13 @@
 .container {
     position: relative;
     height: 90vh;
+    align-content: center;
+    justify-content: center;
   }
   
   h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  }
+  h3 {
+    
   }
   
