--- a/frontend/src/components/login.css
+++ b/frontend/src/components/login.css
@@ -48,8 +48,9 @@
     background: transparent;
   }
   
-  button[type="submit"] {
+  button {
     display: block;
+    margin: 18px auto ;
     padding: 10px;
     font-size: 16px;
     font-weight: bold;
@@ -60,7 +61,7 @@
     cursor: pointer;
   }
   
-  button[type="submit"]:hover {
+  button:hover {
     background-color: #0062cc;
   }
 
