--- a/frontend/src/components/user/profile/profile.css
+++ b/frontend/src/components/user/profile/profile.css
@@ -5,10 +5,16 @@
     align-items: center;
 }
 
-/* .profile-picture {
+.profile-pic {
     border-radius: 50%;
-    margin-bottom: 20px;
-} */
+    width: 200px;
+    /* set the desired width and height */
+    height: 200px;
+    object-fit: cover;
+    /* crop the image to cover the container */
+    object-position: center;
+    /* center the image within the container */
+}
 
 .profile-form {
     display: flex;
