display published courses

--- a/frontend/src/components/user/home/home.css
+++ b/frontend/src/components/user/home/home.css
@@ -1,12 +1,18 @@
 .container {
-    position: relative;
-    height: 90vh;
-  }
-  
-  h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
+  position: relative;
+  height: 90vh;
+}
+
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.course-list {
+  padding: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 50px;
+}
